--- a/01/ejercicio1.html
+++ b/01/ejercicio1.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
+<div>
   <head>
     <meta charset="utf-8">
 
     <title>Ejercicio 1</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="ejercicio1.css">
 
   </head>
 
@@ -34,4 +35,5 @@
 	</div>
 	
   </body>
+</div>	
 </html>
